发布新版本

--- a/vue-ui-docs/index.html
+++ b/vue-ui-docs/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>vo-ui</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.2.1/echarts.min.js"></script>
+  
+    
   </head>
   <body>
     <div id="app"></div>
